Webseite Setup Update 27.01.2021

--- a/index.html
+++ b/index.html
@@ -1,10 +1,76 @@
-≤!DOCTYPE.html>
+<!DOCTYPE html>
+
+<!HEADER BEREICH>
 <html>
     <head>
-        <title>Meine Seite</title>
+        <title>Emmanouela's Portfolio</title>
         <link rel= "stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Wilkommen</h1>
+        <header>
+            <img class="logo" src="logo.svg" alt="Logo">
+            <nav>
+                <ul class="navigation">
+                    <li><strong>Home</strong></li>
+                    <li>Über mich </li>
+                    <li>Kontakt</li>
+                    <li>Portfolio</li>
+                </ul>
+            </nav>
+            <input type="search">
+            <button>Suche</button>
+        </header>
+
+<!CONTENT BEREICH>
+        <body>
+            <div class="img-container">
+                <div class="inner-container" alt="Bild">
+                    <h2>Das ist ein Platzhaltertext</h2>
+                    <h1>UX Design</h1>
+                    <a class="button" href="#">
+                        Zum Portfolio
+                    </a>
+                </div>
+            </div>
+            
+        </body>
+
+<!FOOTER BEREICH>
+
+        <footer>
+            <div class= "footer-nav=">
+                <div class= "inhalt">
+                        <img class="logo" src="logo.svg" alt="Logo">
+                    <section>
+                        <h2>Portfolio</h2>
+                            <a href="#">Logos</a>
+                            <a href="#">Fotografie</a>
+                            <a href="#">Webdesign</a>
+                    </section>
+                    <section>
+                        <h2>Kontakt</h2>
+                            <a href="#">info@ekt-design.de</a>
+                            <a href="#">01234324542</a>
+                            <a href="#">Düsseldorf, NRW</a>
+                    </section>
+                    <section>
+                        <h2>Folge mir!</h2>
+                            <a href="#">Instagram</a>
+                            <a href="#">Behance</a>
+                            <a href="#">YouTube</a>
+                            <div class= "social">
+                                <i class="fab fa-youtube"> </i>
+                                <i class="fab fa-facebook"> </i>
+                                <i class="fab fa-instagram"> </i>
+                            </div>
+                    </section>
+                </div>
+                <div class="notice">
+                    Copyright &copy;
+                    <strong>Emmanouela K. Tiede</strong>
+                </div>
+            </div>
+        </footer>
+       
     </body>
 </html>
