--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
             <nav>
                 <ul class="navigation">
                     <li><strong>Home</strong></li>
-                    <li>Über mich </li>
+                    <li>&Uuml;ber mich </li>
                     <li>Kontakt</li>
                     <li>Portfolio</li>
                 </ul>
             </nav>
-            <input type="search">
+            <input type="search" placeholder="Wonach suchen Sie?" id="">
             <button>Suche</button>
         </header>
 
@@ -51,7 +51,7 @@
                         <h2>Kontakt</h2>
                             <a href="#">info@ekt-design.de</a>
                             <a href="#">01234324542</a>
-                            <a href="#">Düsseldorf, NRW</a>
+                            <a href="#">D&uuml;sseldorf, NRW</a>
                     </section>
                     <section>
                         <h2>Folge mir!</h2>
