--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 <!CONTENT BEREICH>
         <body>
-            <div class="img-container">
-                <div class="inner-container" alt="Bild">
+            <div class="heroteaser">
+                <div class="heroteaser-inhalt" alt="Bild">
                     <h2>Das ist ein Platzhaltertext</h2>
                     <h1>UX Design</h1>
                     <a class="button" href="#">
