--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
                     </a>
                 </div>
             </div>
+
+            <div class="schwerpunkte">
+                <h2>Schwerpunkte</h2>
+                <h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
+                    sed diam nonumy eirmod tempor <br> invidunt ut labore 
+                    et dolore magna aliquyam erat, sed diam voluptua.  
+                    At vero eos et accusam <br> et justo duo dolores et ea rebum. 
+                    Stet clita kasd gubergren, no sea takimata sanctus est. <br> 
+                    Lorem ipsum dolor sit amet.</h3>
+            </div>
             
         </body>
 
