--- a/index.html
+++ b/index.html
@@ -43,6 +43,64 @@
                     Lorem ipsum dolor sit amet.</h3>
             </div>
             
+            <div class="teaser-cards">
+                <div class="card">
+                    <div class="überschrift">
+                        <h2>01</h2>
+                    </div>
+                    <div class="card-inhalt-überschrift">
+                        <h2>At vero eos accusam</h2>
+                        <div class="card-inhalt">
+                            <h3>
+                                At vero eos accusam et <br> justo dolores 
+                                rebum. <br>Bergren, no sea 
+                                takimata sanctus est. Lorem ipsum dolor sit amet. 
+                            </h3>
+
+                        </div>
+                        
+                            <a href="#">mehr</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="überschrift">
+                        <h2>02</h2>
+                    </div>
+                    <div class="card-inhalt-überschrift">
+                        <h2>At vero eos accusam</h2>
+                        <div class="card-inhalt">
+                            <h3>
+                                At vero eos accusam et <br> justo dolores 
+                                rebum. <br>Bergren, no sea 
+                                takimata sanctus est. Lorem ipsum dolor sit amet. 
+                            </h3>
+
+                        </div>
+                            <a href="#">mehr</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="überschrift">
+                        <h2>03</h2>
+                    </div>
+                    <div class="card-inhalt-überschrift">
+                        <h2>At vero eos accusam</h2>
+                        <div class="card-inhalt">
+                            <h3>
+                                At vero eos accusam et <br> justo dolores 
+                                rebum. <br>Bergren, no sea 
+                                takimata sanctus est. Lorem ipsum dolor sit amet. 
+                            </h3>
+
+                        </div>
+                            <a href="#">mehr</a>
+                    </div>
+                </div>
+
+            </div>
+
         </body>
 
 <!FOOTER BEREICH>
