--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </header>
 
 <!CONTENT BEREICH>
+
         <body>
             <div class="heroteaser">
                 <div class="heroteaser-inhalt" alt="Bild">
@@ -32,6 +33,8 @@
                     </a>
                 </div>
             </div>
+
+<!Schwerpunkte>
 
             <div class="schwerpunkte">
                 <h2>Schwerpunkte</h2>
@@ -100,8 +103,27 @@
                 </div>
 
             </div>
+            
+            <!Kontaktaufnahme>
+
+            <div class="kontaktaufnahme">
+                <h2>Kontaktaufnahme</h2>
+
+                <h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
+                    sed diam nonumy eirmod tempor <br> invidunt ut labore 
+                    et dolore magna aliquyam erat, sed diam voluptua.  
+                    At vero eos et accusam <br> et justo duo dolores et ea rebum. 
+                    Stet clita kasd gubergren, no sea takimata sanctus est. <br> 
+                    Lorem ipsum dolor sit amet.</h3>
+
+                    <div class="kontakt-button">
+                        <a href="#">jetzt kontaktieren</a>
+                    </div>
+            </div>
 
         </body>
+
+
 
 <!FOOTER BEREICH>
 
