--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     </head>
     <body>
         <header>
-            <img class="logo" src="logo.svg" alt="Logo">
+            <img class="logo" src="logo.svg">
             <nav>
                 <ul class="navigation">
-                    <li><strong>Home</strong></li>
-                    <li>&Uuml;ber mich </li>
+                    <li><strong>Home</strong></li> 
+                    <li><a href="about.html"> &Uuml;ber mich</a></li> 
                     <li>Kontakt</li>
                     <li>Portfolio</li>
                 </ul>
