Suche Icon, Korrekturen, Verlinkungen

--- a/suche.html
+++ b/suche.html
@@ -3,7 +3,7 @@
 <!HEADER BEREICH>
 <html>
     <head>
-        <title>Über mich</title>
+        <title>Suche</title>
         <link rel= "stylesheet" href="styles.css">
     </head>
     <body>
@@ -18,5 +18,18 @@
                 </ul>
             </nav>
             <input type="search" placeholder="Wonach suchen Sie?" id="">
-            <button>Suche</button>
+            
+            <div class="button">
+                <button>Suche</button>
+            </div>
         </header>
+    </body>
+ <!CONTENT BEREICH>
+ <body>
+     <div class="suchergebnisse">
+      <h1>
+          Kein Ergebnis gefunden :(
+      </h1>
+     </div>
+</body>
+                    
