--- a/index.html
+++ b/index.html
@@ -17,15 +17,19 @@
                     <li>Portfolio</li>
                 </ul>
             </nav>
-            <input type="search" placeholder="Wonach suchen Sie?" id="">
-            <button>Suche</button>
+            <input type="search" placeholder="Suche" id="">
+            <button>
+                <div class="suche-icon">
+                    <a href="suche.html">  </a>
+                </div>
+            </button>
         </header>
 
 <!CONTENT BEREICH>
 
         <body>
             <div class="heroteaser">
-                <div class="heroteaser-inhalt" alt="Bild">
+                <div class="heroteaser-inhalt">
                     <h2>Das ist ein Platzhaltertext</h2>
                     <h1>UX Design</h1>
                     <a class="button" href="#">
