--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 </ul>
             </nav>
             <input type="search" placeholder="Suche" id="">
-            <button>
+            
                 <div class="suche-icon">
-                    <a href="suche.html">  </a>
+                    <a href="suche.html"> Suche</a>
                 </div>
-            </button>
+            
         </header>
 
 <!CONTENT BEREICH>
