--- a/about.html
+++ b/about.html
@@ -3,20 +3,24 @@
 <!HEADER BEREICH>
 <html>
     <head>
-        <title>Über mich</title>
+        <title>Emmanouela's Portfolio</title>
         <link rel= "stylesheet" href="styles.css">
     </head>
     <body>
         <header>
-            <img class="logo" src="logo.svg" alt="Logo">
+            <img class="logo" src="logo.svg">
             <nav>
                 <ul class="navigation">
-                    <li><a href="index.html"> Home</a></li> 
-                    <li><strong>&Uumlber mich</strong></li>
+                    <li><strong>Home</strong></li> 
+                    <li><a href="about.html"> &Uuml;ber mich</a></li> 
                     <li>Kontakt</li>
                     <li>Portfolio</li>
                 </ul>
             </nav>
-            <input type="search" placeholder="Wonach suchen Sie?" id="">
-            <button>Suche</button>
+            <input type="search" placeholder="Suche" id="">
+            <button>
+                <div class="suche-icon">
+                    <a href="suche.html">  </a>
+                </div>
+            </button>
         </header>
