--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
             <img class="logo" src="logo.svg">
             <nav>
                 <ul class="navigation">
-                    <li><strong>Home</strong></li> 
-                    <li><a href="about.html"> &Uuml;ber mich</a></li> 
+                    <li> <a href="index.html"> Home </a></li> 
+                    <li><a href="about.html"> <strong> &Uuml;ber mich </strong></a></li> 
                     <li>Kontakt</li>
                     <li>Portfolio</li>
                 </ul>
