--- a/suche.html
+++ b/suche.html
@@ -17,11 +17,13 @@
                     <li>Portfolio</li>
                 </ul>
             </nav>
-            <input type="search" placeholder="Wonach suchen Sie?" id="">
+            <input type="search" placeholder="Suche" id="">
             
-            <div class="button">
-                <button>Suche</button>
-            </div>
+            <button>
+                <div class="suche-icon">
+                    <a href="suche.html">  </a>
+                </div>
+            </button>
         </header>
     </body>
  <!CONTENT BEREICH>
