--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
             </div>
             
-            <!Meine letzten Projekte>
+<!Meine letzten Projekte>
 
             <div class="letzten-projekte">
 
@@ -131,7 +131,31 @@
                     </div>
             </div>
 
-            <!Kontaktaufnahme>
+<!Besonderheiten und Vorteile>
+
+            <div class="besonderheiten-vorteile">
+                    <div class="vorteile-bild">
+                    </div>
+                    <div class="vorteile-inhalt">
+                        <h2>Besonderheiten<br>& Vorteile</h2>
+                        <h3>At vero eos et accusam et justo duo est
+                            <br>dolores et ea rebum stet clita kasd 
+                            <br>gubergren.</h3>
+                            <li>
+                                Invidunt ut labore et dolore magna aliquyam 
+                                <br> erat, sed diam lorem ipsum
+                            </li>
+                            <li>
+                                Voluptua at vero eos et accusam et justo duo 
+                                <br>dolores et ea rebum
+                            </li>
+                        <a class="button" href="#">
+                            &Uumlber mich
+                        </a>
+                    </div>
+            </div>
+
+<!Kontaktaufnahme>
 
             <div class="kontaktaufnahme">
                 <h2>Kontaktaufnahme</h2>
@@ -150,6 +174,46 @@
 
         </body>
 
+<!Portfolio Overview>
+
+<div class="portfolio-overview">
+
+    <div class="portfolio-bild">
+        <div class="portfolio-bild1"></div>
+      <div class="portfolio-überschrift1">
+         <a href="#">Logos</a>
+      </div>
+    </div>
+
+    <div class="portfolio-bild">
+        <div class="portfolio-bild2"></div>
+      <div class="portfolio-überschrift2">
+         <a href="#">Corporate</a>
+      </div>
+    </div>
+
+    <div class="portfolio-bild">
+        <div class="portfolio-bild3"></div>
+      <div class="portfolio-überschrift3">
+         <a href="#">Webdesign</a>
+      </div>
+    </div>
+
+    <div class="portfolio-bild">
+        <div class="portfolio-bild4"></div>
+      <div class="portfolio-überschrift4">
+         <a href="#">Webdesign</a>
+      </div>
+    </div>
+
+    <div class="portfolio-bild">
+        <div class="portfolio-bild5"></div>
+      <div class="portfolio-überschrift5">
+         <a href="#">Webdesign</a>
+      </div>
+    </div>
+
+</div>
 
 
 <!FOOTER BEREICH>
