--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
             <img class="logo" src="logo.svg">
             <nav>
                 <ul class="navigation">
-                    <li><strong>Home</strong></li> 
-                    <li><a href="about.html"> &Uuml;ber mich</a></li> 
-                    <li>Kontakt</li>
-                    <li>Portfolio</li>
+                    <li> <a href="index.html"><strong>Home</strong></a></li> 
+                    <li><a href="about.html">&Uuml;ber mich</a></li> 
+                    <li> <a href="kontakt.html">Kontakt</a></li>
+                    <li> <a href="portfolio.html">Portfolio</a></li>
                 </ul>
             </nav>
             <input type="suche" placeholder="Suche">
@@ -27,7 +27,7 @@
 
 <!CONTENT BEREICH>
 
-        <body>
+<body>
             <div class="heroteaser">
                 <div class="heroteaser-inhalt">
                     <h2>Das ist ein Platzhaltertext</h2>
@@ -172,7 +172,7 @@
                     </div>
             </div>
 
-        </body>
+
 
 <!Portfolio Overview>
 
@@ -181,40 +181,41 @@
     <div class="portfolio-bild">
         <div class="portfolio-bild1"></div>
       <div class="portfolio-überschrift1">
-         <a href="#">Logos</a>
+         <a href="#"><strong> Logos </strong></a>
       </div>
     </div>
 
     <div class="portfolio-bild">
         <div class="portfolio-bild2"></div>
       <div class="portfolio-überschrift2">
-         <a href="#">Corporate</a>
+         <a href="#"><strong>Corporate</strong></a>
       </div>
     </div>
 
     <div class="portfolio-bild">
         <div class="portfolio-bild3"></div>
       <div class="portfolio-überschrift3">
-         <a href="#">Webdesign</a>
+         <a href="#"><strong>Webdesign</strong></a>
       </div>
     </div>
 
     <div class="portfolio-bild">
         <div class="portfolio-bild4"></div>
       <div class="portfolio-überschrift4">
-         <a href="#">Webdesign</a>
+         <a href="#"><strong>Social Media</strong></a>
       </div>
     </div>
 
     <div class="portfolio-bild">
         <div class="portfolio-bild5"></div>
       <div class="portfolio-überschrift5">
-         <a href="#">Webdesign</a>
+         <a href="#"><strong>Produktdesign</strong></a>
       </div>
     </div>
 
 </div>
 
+</body>
 
 <!FOOTER BEREICH>
 
