--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <input type="suche" placeholder="Suche">
                 <div class="suche-icon">
                     <a href="suche.html">
-                        <img class="suche" src="suche-icon.png" alt="Suche">
+                        <img class="suche" src="suche-icon.svg" alt="Suche">
                     </a>
                 </div>
         </header>
