--- a/about.html
+++ b/about.html
@@ -28,12 +28,12 @@
 
 <!CONTENT BEREICH>
 <body>
-<!Meine letzten Projekte>
+<!Über mich>
 
-            <div class="letzten-projekte">
+            <div class="ueber-mich-einleitung">
 
-                <div class="meine-projekte">
-                    <h3>UX Designer</h2>
+                <div class="ueber-mich-inhalt">
+                    <h3>Kommunikationsdesign</h2>
                     <h2>Consetetur sanctus<br>
                         tempor dolor accusam<br>
                         sadipscing.</h2>
@@ -41,58 +41,32 @@
                         dolores et ea rebum. Stet clita kasd <br>
                         gubergren, no sea takimata sanctus <br>
                         dolor sit amet. </h3>
-                    <a class="button" href="#">
+                    <a class="button" href="portfolio.html">
                         Zum Portfolio
                     </a>
                 </div>
-                    <div class="bild1">
-                    </div>
-                    <div class="bild2">
+                    <div class="ueber-mich-bild">
                     </div>
             </div>
 
 
-<div class="letzten-projekte">
+ <div class="ueber-mich-seite">
 
-                <div class="meine-projekte">
-                    <h3>UX Designer</h2>
-                    <h2>Consetetur sanctus<br>
-                        tempor dolor accusam<br>
-                        sadipscing.</h2>
-                    <h3>At vero eos et accusam et justo duo <br>
-                        dolores et ea rebum. Stet clita kasd <br>
-                        gubergren, no sea takimata sanctus <br>
-                        dolor sit amet. </h3>
-                    <a class="button" href="#">
-                        Zum Portfolio
-                    </a>
-                </div>
-                    <div class="bild1">
-                    <h3>At vero eos et accusam et justo duo <br>
-                        dolores et ea rebum. Stet clita kasd <br>
-                        gubergren, no sea takimata sanctus <br>
-                        dolor sit amet.</h3>
-                    </div>
- </div>
-
-
- <div class="über-mich-seite">
-
-                <div class="über-mich-seite-bild">
-                    <div class="über-mich-seite-bild1"></div>
+                <div class="ueber-mich-seite-bild">
+                    <div class="ueber-mich-seite-bild1"></div>
                 </div>
             
-                <div class="über-mich-seite-bild">
-                    <div class="über-mich-seite-bild2"></div>
+                <div class="ueber-mich-seite-bild">
+                    <div class="ueber-mich-seite-bild2"></div>
                 </div>
             
-                <div class="über-mich-seite-bild">
-                    <div class="über-mich-seite-bild3"></div>
+                <div class="ueber-mich-seite-bild">
+                    <div class="ueber-mich-seite-bild3"></div>
                 </div>
 </div>
-     <div class="über-mich">
-        <div class="über-mich-button">
-        <a href="#">Zum Portfolio</a>
+     <div class="ueber-mich">
+        <div class="ueber-mich-button">
+        <a href="portfolio.html">Zum Portfolio</a>
         </div>
      </div>
 </body>
@@ -105,26 +79,21 @@
                         <img class="logo" src="logo.svg" alt="Logo">
                     <section>
                         <h2>Portfolio</h2>
-                            <a href="#">Logos</a>
-                            <a href="#">Fotografie</a>
-                            <a href="#">Webdesign</a>
+                            <a href="portfolio.html">Logos</a>
+                            <a href="portfolio.html">Fotografie</a>
+                            <a href="portfolio.html">Webdesign</a>
                     </section>
                     <section>
                         <h2>Kontakt</h2>
-                            <a href="#">info@ekt-design.de</a>
-                            <a href="#">01234324542</a>
-                            <a href="#">D&uuml;sseldorf, NRW</a>
+                            <a href="kontakt.html">info@ekt-design.de</a>
+                            <a href="kontakt.html">01234324542</a>
+                            <a href="kontakt.html">D&uuml;sseldorf, NRW</a>
                     </section>
                     <section>
                         <h2>Folge mir!</h2>
                             <a href="#">Instagram</a>
                             <a href="#">Behance</a>
                             <a href="#">YouTube</a>
-                            <div class= "social">
-                                <i class="fab fa-youtube"> </i>
-                                <i class="fab fa-facebook"> </i>
-                                <i class="fab fa-instagram"> </i>
-                            </div>
                     </section>
                 </div>
                 <div class="notice">
