--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <!HEADER BEREICH>
 <html>
     <head>
+        <link rel="icon" href="favicon.png" type="image/png">
         <title>Emmanouela's Portfolio</title>
         <link rel= "stylesheet" href="styles.css">
     </head>
@@ -32,7 +33,7 @@
                 <div class="heroteaser-inhalt">
                     <h2>Das ist ein Platzhaltertext</h2>
                     <h1>UX Design</h1>
-                    <a class="button" href="#">
+                    <a class="button" href="portfolio.html">
                         Zum Portfolio
                     </a>
                 </div>
@@ -52,10 +53,10 @@
             
             <div class="teaser-cards">
                 <div class="card">
-                    <div class="überschrift">
+                    <div class="ueberschrift">
                         <h2>01</h2>
                     </div>
-                    <div class="card-inhalt-überschrift">
+                    <div class="card-inhalt-ueberschrift">
                         <h2>At vero eos accusam</h2>
                         <div class="card-inhalt">
                             <h3>
@@ -66,15 +67,15 @@
 
                         </div>
                         
-                            <a href="#">mehr</a>
+                            <a href="about.html">mehr</a>
                     </div>
                 </div>
 
                 <div class="card">
-                    <div class="überschrift">
+                    <div class="ueberschrift">
                         <h2>02</h2>
                     </div>
-                    <div class="card-inhalt-überschrift">
+                    <div class="card-inhalt-ueberschrift">
                         <h2>At vero eos accusam</h2>
                         <div class="card-inhalt">
                             <h3>
@@ -84,15 +85,15 @@
                             </h3>
 
                         </div>
-                            <a href="#">mehr</a>
+                            <a href="about.html">mehr</a>
                     </div>
                 </div>
 
                 <div class="card">
-                    <div class="überschrift">
+                    <div class="ueberschrift">
                         <h2>03</h2>
                     </div>
-                    <div class="card-inhalt-überschrift">
+                    <div class="card-inhalt-ueberschrift">
                         <h2>At vero eos accusam</h2>
                         <div class="card-inhalt">
                             <h3>
@@ -102,7 +103,7 @@
                             </h3>
 
                         </div>
-                            <a href="#">mehr</a>
+                            <a href="about.html">mehr</a>
                     </div>
                 </div>
 
@@ -121,7 +122,7 @@
                         justo duo dolores et ea rebum. Stet clita <br>
                         kasd gubergren, no sea takimata <br>
                         sanctus dolor sit amet. </h3>
-                    <a class="button" href="#">
+                    <a class="button" href="portfolio.html">
                         Zum Portfolio
                     </a>
                 </div>
@@ -149,7 +150,7 @@
                                 Voluptua at vero eos et accusam et justo duo 
                                 <br>dolores et ea rebum
                             </li>
-                        <a class="button" href="#">
+                        <a class="button" href="about.html">
                             &Uumlber mich
                         </a>
                     </div>
@@ -168,7 +169,7 @@
                     Lorem ipsum dolor sit amet.</h3>
 
                     <div class="kontakt-button">
-                        <a href="#">jetzt kontaktieren</a>
+                        <a href="kontakt.html">jetzt kontaktieren</a>
                     </div>
             </div>
 
@@ -180,36 +181,36 @@
 
     <div class="portfolio-bild">
         <div class="portfolio-bild1"></div>
-      <div class="portfolio-überschrift1">
-         <a href="#"><strong> Logos </strong></a>
+      <div class="portfolio-ueberschrift1">
+         <a href="portfolio.html"><strong> Logos </strong></a>
       </div>
     </div>
 
     <div class="portfolio-bild">
         <div class="portfolio-bild2"></div>
-      <div class="portfolio-überschrift2">
-         <a href="#"><strong>Corporate</strong></a>
+      <div class="portfolio-ueberschrift2">
+         <a href="portfolio.html"><strong>Corporate</strong></a>
       </div>
     </div>
 
     <div class="portfolio-bild">
         <div class="portfolio-bild3"></div>
-      <div class="portfolio-überschrift3">
-         <a href="#"><strong>Webdesign</strong></a>
+      <div class="portfolio-ueberschrift3">
+         <a href="portfolio.html"><strong>Webdesign</strong></a>
       </div>
     </div>
 
     <div class="portfolio-bild">
         <div class="portfolio-bild4"></div>
-      <div class="portfolio-überschrift4">
-         <a href="#"><strong>Social Media</strong></a>
+      <div class="portfolio-ueberschrift4">
+         <a href="portfolio.html"><strong>Social Media</strong></a>
       </div>
     </div>
 
     <div class="portfolio-bild">
         <div class="portfolio-bild5"></div>
-      <div class="portfolio-überschrift5">
-         <a href="#"><strong>Produktdesign</strong></a>
+      <div class="portfolio-ueberschrift5">
+         <a href="portfolio.html"><strong>Produktdesign</strong></a>
       </div>
     </div>
 
@@ -225,26 +226,21 @@
                         <img class="logo" src="logo.svg" alt="Logo">
                     <section>
                         <h2>Portfolio</h2>
-                            <a href="#">Logos</a>
-                            <a href="#">Fotografie</a>
-                            <a href="#">Webdesign</a>
+                            <a href="portfolio.html">Logos</a>
+                            <a href="portfolio.html">Fotografie</a>
+                            <a href="portfolio.html">Webdesign</a>
                     </section>
                     <section>
                         <h2>Kontakt</h2>
-                            <a href="#">info@ekt-design.de</a>
-                            <a href="#">01234324542</a>
-                            <a href="#">D&uuml;sseldorf, NRW</a>
+                            <a href="kontakt.html">info@ekt-design.de</a>
+                            <a href="kontakt.html">01234324542</a>
+                            <a href="kontakt.html">D&uuml;sseldorf, NRW</a>
                     </section>
                     <section>
                         <h2>Folge mir!</h2>
                             <a href="#">Instagram</a>
                             <a href="#">Behance</a>
                             <a href="#">YouTube</a>
-                            <div class= "social">
-                                <i class="fab fa-youtube"> </i>
-                                <i class="fab fa-facebook"> </i>
-                                <i class="fab fa-instagram"> </i>
-                            </div>
                     </section>
                 </div>
                 <div class="notice">
