--- a/kontakt.html
+++ b/kontakt.html
@@ -38,7 +38,7 @@
 <!Rezensionen>
 
             <div class="rezensionen">
-                <div class="rezensionen-überschrift">
+                <div class="rezensionen-ueberschrift">
                     <h2>Rezensionen</h2>
                 </div>
 
@@ -50,7 +50,7 @@
                     Lorem ipsum dolor sit amet.</h3>
 
                     <div class="rezensionen-button">
-                        <a href="#">jetzt kontaktieren</a>
+                        <a href="kontakt.html">jetzt kontaktieren</a>
                     </div>
             </div>
 
@@ -66,26 +66,21 @@
                         <img class="logo" src="logo.svg" alt="Logo">
                     <section>
                         <h2>Portfolio</h2>
-                            <a href="#">Logos</a>
-                            <a href="#">Fotografie</a>
+                            <a href="portfolio.html">Logos</a>
+                            <a href="portfolio.html">Fotografie</a>
                             <a href="#">Webdesign</a>
                     </section>
                     <section>
                         <h2>Kontakt</h2>
-                            <a href="#">info@ekt-design.de</a>
-                            <a href="#">01234324542</a>
-                            <a href="#">D&uuml;sseldorf, NRW</a>
+                            <a href="kontakt.html">info@ekt-design.de</a>
+                            <a href="kontakt.html">01234324542</a>
+                            <a href="kontakt.html">D&uuml;sseldorf, NRW</a>
                     </section>
                     <section>
                         <h2>Folge mir!</h2>
                             <a href="#">Instagram</a>
                             <a href="#">Behance</a>
                             <a href="#">YouTube</a>
-                            <div class= "social">
-                                <i class="fab fa-youtube"> </i>
-                                <i class="fab fa-facebook"> </i>
-                                <i class="fab fa-instagram"> </i>
-                            </div>
                     </section>
                 </div>
                 <div class="notice">
