--- a/suche.html
+++ b/suche.html
@@ -37,3 +37,37 @@
      </div>
 </body>
                     
+<!FOOTER BEREICH>
+
+        <footer>
+            <div class= "footer-nav=">
+                <div class= "inhalt">
+                        <img class="logo" src="logo.svg" alt="Logo">
+                    <section>
+                        <h2>Portfolio</h2>
+                            <a href="portfolio.html">Logos</a>
+                            <a href="portfolio.html">Fotografie</a>
+                            <a href="portfolio.html">Webdesign</a>
+                    </section>
+                    <section>
+                        <h2>Kontakt</h2>
+                            <a href="kontakt.html">info@ekt-design.de</a>
+                            <a href="kontakt.html">01234324542</a>
+                            <a href="kontakt.html">D&uuml;sseldorf, NRW</a>
+                    </section>
+                    <section>
+                        <h2>Folge mir!</h2>
+                            <a href="#">Instagram</a>
+                            <a href="#">Behance</a>
+                            <a href="#">YouTube</a>
+                    </section>
+                </div>
+                <div class="notice">
+                    Copyright &copy;
+                    <strong>Emmanouela K. Tiede</strong>
+                </div>
+            </div>
+        </footer>
+       
+    </body>
+</html>
