--- a/portfolio.html
+++ b/portfolio.html
@@ -26,12 +26,13 @@
         </header>
 
 
+
 <!CONTENT BEREICH>
 <body>
 
 <body>
-            <div class="heroteaser-kontakt">
-                <div class="heroteaser-kontakt-inhalt">
+            <div class="heroteaser-portfolio">
+                <div class="heroteaser-portfolio-inhalt">
                 </div>
             </div>
 
@@ -137,26 +138,21 @@
                         <img class="logo" src="logo.svg" alt="Logo">
                     <section>
                         <h2>Portfolio</h2>
-                            <a href="#">Logos</a>
-                            <a href="#">Fotografie</a>
-                            <a href="#">Webdesign</a>
+                            <a href="portfolio.html">Logos</a>
+                            <a href="portfolio.html">Fotografie</a>
+                            <a href="portfolio.html">Webdesign</a>
                     </section>
                     <section>
                         <h2>Kontakt</h2>
-                            <a href="#">info@ekt-design.de</a>
-                            <a href="#">01234324542</a>
-                            <a href="#">D&uuml;sseldorf, NRW</a>
+                            <a href="kontakt.html">info@ekt-design.de</a>
+                            <a href="kontakt.html">01234324542</a>
+                            <a href="kontakt.html">D&uuml;sseldorf, NRW</a>
                     </section>
                     <section>
                         <h2>Folge mir!</h2>
                             <a href="#">Instagram</a>
                             <a href="#">Behance</a>
                             <a href="#">YouTube</a>
-                            <div class= "social">
-                                <i class="fab fa-youtube"> </i>
-                                <i class="fab fa-facebook"> </i>
-                                <i class="fab fa-instagram"> </i>
-                            </div>
                     </section>
                 </div>
                 <div class="notice">
