--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
     <head>
         <link rel="icon" href="favicon.png" type="image/png">
-        <title>Emmanouela's Portfolio</title>
+        <title>Meraki Design • Emmanouela's Portfolio</title>
         <link rel= "stylesheet" href="styles.css">
     </head>
     <body>
