--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <!HEADER BEREICH>
 <html>
     <head>
-        <title>Emmanouela's Portfolio</title>
+        <title>Meraki Design • Emmanouela's Portfolio</title>
         <link rel= "stylesheet" href="styles.css">
     </head>
     <body>
@@ -44,9 +44,10 @@
                     <a class="button" href="portfolio.html">
                         Zum Portfolio
                     </a>
+                    
                 </div>
-                    <div class="ueber-mich-bild">
-                    </div>
+                <div class="ueber-mich-header-bild">
+                </div>
             </div>
 
 
