--- a/kontakt.html
+++ b/kontakt.html
@@ -3,7 +3,7 @@
 <!HEADER BEREICH>
 <html>
     <head>
-        <title>Emmanouela's Portfolio</title>
+        <title>Meraki Design • Emmanouela's Portfolio</title>
         <link rel= "stylesheet" href="styles.css">
     </head>
     <body>
