--- a/suche.html
+++ b/suche.html
@@ -11,10 +11,10 @@
             <img class="logo" src="logo.svg" alt="Logo">
             <nav>
                 <ul class="navigation">
-                    <li><a href="index.html"> Home</a></li> 
-                    <li><strong>&Uumlber mich</strong></li>
-                    <li>Kontakt</li>
-                    <li>Portfolio</li>
+                    <li> <a href="index.html"> Home </a></li> 
+                    <li><a href="about.html"> &Uuml;ber mich</a></li> 
+                    <li> <a href="kontakt.html">Kontakt</a></li>
+                    <li> <a href="portfolio.html">Portfolio</a></li>
                 </ul>
             </nav>
             <input type="search" placeholder="Suche" id="">
